sandc/test/fixtures/pbtRegression/shouldSucceed/manyFilesSamePackage/Bar.sand
package foo;

pub open class Bar {
    q: Qux;
}