sandc/test/fixtures/pbtRegression/shouldFail/unqualifiedPackageRefs/namedFromUnnamed/Named.sand
package named;

pub class Named {
    
}